--- a/gb/20/12/30/n12655776.md
+++ b/gb/20/12/30/n12655776.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lxeios3137/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lxeios3137/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lxeios3137/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lxeios3137/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lxeios3137/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lxeios3137/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lxeios3137/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lxeios3137/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/lxeios3137/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/lxeios3137/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lxeios3137/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lxeios3137/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lxeios3137/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lxeios3137/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lxeios3137/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：2020年中共不准讲真话的七大案例</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/2020-3-24-ccp-virus-600x400.png" />
 <h6>因中共隐瞒疫情，导致了中共病毒（武汉肺炎）大瘟疫席卷全球。（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2020年12月31日讯】2020年，<ahref="https://github.com/lxeios3137/djy/blob/master/gb/tag/%E5%BA%9A%E5%AD%90%E5%B9%B4.md#1">庚子年</a>，是中国遭受大灾大难的一年。导致大灾大难的原因很多。一个最重要的原因是，中共一如既往地打击讲真话者。从1月1日打压8名讲真话的医生，至12月28日重判年讲真话的公民记者张展，一年到头，从未停止过。这里，择要谈七大案例。</p>
+	<p>【大纪元2020年12月31日讯】2020年，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%BA%9A%E5%AD%90%E5%B9%B4.md#1">庚子年</a>，是中国遭受大灾大难的一年。导致大灾大难的原因很多。一个最重要的原因是，中共一如既往地打击讲真话者。从1月1日打压8名讲真话的医生，至12月28日重判敢讲真话的公民记者张展，一年到头，从未停止过。这里，择要谈七大案例。</p>
 <h2>一、美国驻华大使布兰斯塔德</h2>
 <p>10月3日，美国驻华大使布兰斯塔德，提前结束任期，离开北京，返回美国。至今，美国没有驻中国大使，只有一个临时代办。美中关系事实上从大使级降为代办级。</p>
 <p>8月26日，美国驻华大使布兰斯塔德向中共党媒《人民日报》投稿，希望全文刊发《基于对等重置关系》一文，却遭到拒绝。真正的原因是，这篇文章讲了中共不爱听的真话。</p>
-<p>布兰斯塔德是何许人也？曾经被认为是“中国人民的老朋友”。曾经是美国最年轻的州长，也是美国任职时间最长的州长。1985年，时任爱荷华州州长布兰斯塔德，接待了到访的时任河北省正定县委书记习近平。2012年，习近平以中共国家副主席身份访美时，特地重访爱荷华州，布兰斯塔德再次以州长身份，接待习近平。布兰斯塔德曾4次访问中国。因为他和习近平是“老朋友”，被川普总统提名为美国驻华大使。</p>
+<p>布兰斯塔德是何许人也？曾经被认为是“中国人民的老朋友”。曾经是美国最年轻的州长，也是美国任职时间最长的州长。1985年，时任爱荷华州州长布兰斯塔德，接待了到访的时任河北省正定县委书记习近平。2012年，习近平以中共国家副主席身份访美时，特地重访爱荷华州，布兰斯塔德再次以州长身份，接待习近平。布兰斯塔德曾4次访问中国。因为他和习近平是“老朋友”，被川普（特朗普）总统提名为美国驻华大使。</p>
 <p>川普实指望藉由这位“中国人民的老朋友”，发展与中国人民的友好关系，但是，中共竟不准他在中共党媒上讲真话！</p>
 <h2>二、清华大学教授许章润</h2>
 <p>7月6日，清华大学法学院教授许章润，被中共以“嫖娼”的名义抓捕，7月12日获释回家。7月15日，被清华大学开除公职。其住所50米半径内新装了9个监控探头。</p>
 <p>8月13日，美国哈佛大学费正清中国研究中心向许章润发出聘书，邀请他从2020年7月1日至2021年6月30日担任该中心的研究学者。邀请信还说，如果由于疫情耽误了办手续，可以从2021年7月1日开始任职。</p>
 <p>8月21日，法广报导说，8月13日当天，中共有关部门约谈许章润，向他发出4项禁令：禁止离开北京、禁止出境、禁止接受媒体访问、禁止接受任何资助。</p>
-<p>许章润向他的律师表示，自己从未嫖娼，而官方也没有手机通联记录、旅馆监控影片和转账纪录等的证据，认为中共的指控是“诬陷”。</p>
+<p>许章润向他的律师表示，自己从未嫖娼，而官方也没有手机通联记录、旅馆监控影片和转账记录等证据，认为中共的指控是“诬陷”。</p>
 <p>许章润被迫害的真正原因是：他近年发表了一系列尖锐抨击中共的文章，并将其收集在《戊戌六章》一书中。这本书今年6月底在纽约出版，其中包括他2月初就大瘟疫问题发表的《愤怒的人民已不再恐惧》。</p>
 <h2>三、中国著名地产商任志强</h2>
 <p>9月22日，中共以贪污等4项罪名，重判任志强有期徒刑18年。</p>
@@ -27,7 +27,7 @@
 <p>如果不是出于忧国忧民之心，如果今年2月不写那篇警世长文，如果对中共做的坏事睁一只眼闭一只眼，任志强不会有这场牢狱之灾。</p>
 <h2>四、原中共中央党校教授蔡霞</h2>
 <p>8月17日，身在美国的蔡霞，被中央党校开除党籍，取消退休待遇。之后，她在中国的银行账号被查封，存款无法取出。</p>
-<p>今年6月，蔡霞在一个内部会议上的讲话录音在网上传出。其中，蔡霞批评中共已成“政治僵尸”，认为挽救危局的当务之急是“换人”。今年2月李文亮医生因“中共病毒”去世后，蔡霞签署了要求医护人员有言论自由的声明。今年3月任志强被抓后，蔡霞写了《<ahref="https://github.com/lxeios3137/djy/blob/master/gb/tag/%E5%9B%A0%E8%A8%80%E8%8E%B7%E7%BD%AA.md#1">因言获罪</a>株连九族必须终止》。今年5月，在中共全国人大着手制订“港版国安法”后，蔡霞写文章表达了反对意见。</p>
+<p>今年6月，蔡霞在一个内部会议上的讲话录音在网上传出。其中，蔡霞批评中共已成“政治僵尸”，认为挽救危局的当务之急是“换人”。今年2月李文亮医生因中共病毒（武汉肺炎）去世后，蔡霞签署了要求医护人员有言论自由的声明。今年3月任志强被抓后，蔡霞写了《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%9B%A0%E8%A8%80%E8%8E%B7%E7%BD%AA.md#1">因言获罪</a>株连九族必须终止》。今年5月，在中共全国人大着手制订“港版国安法”后，蔡霞写文章表达了反对意见。</p>
 <p>蔡霞的外祖父是中共元老，父亲、母亲、舅舅、姨姨和她本人，都曾加入中共军队。因其红二代和中共体制内学者的身份，中共对她的打压，在海内外引发强烈震荡。</p>
 <h2>五、中国病毒学家闫丽梦</h2>
 <p>4月28日，闫丽梦逃亡美国。</p>
@@ -37,7 +37,7 @@
 <p>7月10日，闫丽梦首次现身福克斯电视台，曝光中共隐瞒疫情的黑幕。这个节目一播出，立即成为轰动世界的重大新闻。此后，闫丽梦多次接受美国媒体采访，并于9月14日、10月8日，在学术资源库网站zenodo发表了两篇关于“中共病毒”的论文。闫丽梦说，她去年12月31日就从中国疾控中心专家那里得知“病毒人传人”的消息，但中共一直刻意隐瞒。闫丽梦认为，“中共病毒”很可能是中共军队实验室人工合成的。</p>
 <p>闫丽梦是山东青岛人，中南大学湘雅医学院临床医学专业硕士，南方医科大学（原解放军第一军医大学）博士。之后在香港大学做博士后，主要从事疫苗、抗体和细胞免疫学研究。曾在国际著名专业期刊《自然》和《柳叶刀》发表过病毒动力学方面的论文。</p>
 <h2>六、公民记者张展</h2>
-<p>12月28日，上海浦东新区法院以犯“寻衅滋事罪”，判处张展有期徒刑4年。</p>
+<p>12月28日，上海浦东新区法院以“寻衅滋事罪”，判处张展有期徒刑4年。</p>
 <p>起诉书指控：张展二月初进入武汉，此后多次通过微信、推特、油管等网络平台发布大量“虚假信息”，以及接受海外多家媒体采访。</p>
 <p>2019年12月武汉肺炎疫情爆发后，中共从2020年1月1日起，接二连三采取了一系列“封口”措施，同时通过党媒不断散布“没有发现人传人”，病毒“可防可控”等假消息，导致疫情蔓延全中国、全世界。为了解疫情真相，张展到了武汉。</p>
 <p>署名“王剑虹”的网友总结说：“她（张展）应该是在李文亮去世不久开始在武汉拍视频访谈节目的，她的系列视频涉及疫情中武汉的方方面面：方舱医院、社区防疫、超市、火葬场、火车站、病毒研究所、雷神山、华南海鲜市场、医院、商店、菜价、民生艰难、外地人生存、数字零增的背后。”</p>
@@ -45,54 +45,54 @@
 <p>5月14日，张展在武汉被上海警方抓捕，次日被刑拘。她的辩护律师称，张展自6月底开始绝食，遭强制插管灌食、上脚镣、24小时戴约束带等酷刑。12月28日，张展是坐着轮椅出庭的，身体非常虚弱。</p>
 <p>张展，1983年出生，陕西咸阳人，基督徒，金融学硕士，当过律师，因参加维权活动被注销律师执业证。</p>
 <h2>七、武汉中心医院医生李文亮</h2>
-<p>2019年12月30日下午，武汉市中心医院医生艾芬在科室群组发出一份检测报告，显示一个病人的SARS冠状病毒等检出高置信度阳性指标。这则消息不久传到李文亮处，下午17时43分，李文亮在微信朋友群中发布消息称：“华南水果海鲜市场确诊了7例SARS”。随后发了一张检测报告，一张患者肺部CT图，18时42分，他又补充说：“最新消息是冠状病毒感染确定了，正在进行病毒分型”；他还在群里嘱咐说，不要外传。</p>
+<p>2019年12月30日下午，武汉市中心医院医生艾芬在科室群组发出一份检测报告，显示一个病人的SARS冠状病毒等检出高置信度阳性指标。这则消息不久传到李文亮处，17时43分，李文亮在微信朋友群中发布消息称：“华南水果海鲜市场确诊了7例SARS”。随后发了一张检测报告，一张患者肺部CT图，18时42分，他又补充说：“最新消息是冠状病毒感染确定了，正在进行病毒分型”；他还在群里嘱咐说，不要外传。</p>
 <p>12月31日凌晨1点半，李文亮被医院领导叫到武汉市卫健委询问情况，天亮上班后，又被医院监察科约谈，之后，被要求写了《不实消息外传的反思与自我批评》。据武汉市中心医院的一名医生透露，医院原计划开除李文亮。</p>
 <p>2020年1月3日，李文亮因“在互联网上发布不实言论”，被中南路派出所严厉警告和训诫。警方称，“你的行为严重扰乱了社会秩序”，“是一种违法行为”；“郑重告诫你，如果你固执己见，不思悔改，继续进行违法活动，你将会受到法律的制裁”。</p>
 <p>1月31日，李文亮被确诊感染“中共病毒”。2月7日病逝，年仅34岁。</p>
 <h2>结语</h2>
 <p>讲真话是做人最基本的道德，讲真话是宪法赋予公民最基本的人权。但是，在“中共国”，讲真话是罪过。从1949年中共夺取政权至今年，71年来，打压讲真话者，一以贯之。无论中共党内还是党外，因讲真话被迫害者无计其数。</p>
 <p>真话兴国，谎言祸国。这是基本的常识。但是，中共从理论到实践都是极端反常的，因为中共的本质是“假、恶、斗”。71年的“假、恶、斗”，将“中共国”变成全世界最大的谎言大国。中共最终将在自欺欺人的谎言中走向自我毁灭。</p>
-<p>责任编辑：高义</p>
+<p>责任编辑：高义?#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lxeios3137/djy/blob/master/gb/20/10/28/n12509218.md#1">王友群：内蒙古官场烂透了 终极老虎是谁？</a></li>
-<li><a href="https://github.com/lxeios3137/djy/blob/master/gb/20/12/22/n12636808.md#1">王友群：亿元贪官大盘点 中共腐败冠全球</a></li>
-<li><a href="https://github.com/lxeios3137/djy/blob/master/gb/20/12/23/n12641243.md#1">王友群：14亿中国人民被蒙在鼓里的九大悬案</a></li>
-<li><a href="https://github.com/lxeios3137/djy/blob/master/gb/20/12/26/n12646663.md#1">王友群：中国共产党将亡的九大理由</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/10/28/n12509218.md#1">王友群：内蒙古官场烂透了 终极老虎是谁？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/12/22/n12636808.md#1">王友群：亿元贪官大盘点 中共腐败冠全球</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/12/23/n12641243.md#1">王友群：14亿中国人民被蒙在鼓里的九大悬案</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/12/26/n12646663.md#1">王友群：中国共产党将亡的九大理由</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/18/n9859787.md#1" target="_blank">杨宁：中南海内部电影与特供“内片”</a></li><li><a href="https://github.com/lxeios3137/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/12/n10478618.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/27/n12647393.md#1">中共培育基因改造士兵 或引圣经中末世战争</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/11/n12613857.md#1">死于缅甸战场的日本兵 托梦转生缅甸女</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/21/n12634571.md#1">《诸世纪》预言共产恶魔的产生与覆灭</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/9/12/15/n2754404.md#1">绘画中最美的圣母子形像</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/12/n12614962.md#1">【命理】尽人事感天心 五度落榜生变状元</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12650320.md#1">【重播】乔州数十名目击者揭大选舞弊</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/30/n12654854.md#1">【微视频】2020“狼人杀”卡牌游戏道天机？</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/30/n12654960.md#1">【直播】乔州参院选举听证会 朱利安尼讲话</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/27/n12648017.md#1">美政党副主席：唯用军事法庭 川普方可救国</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12649661.md#1">【新闻大家谈】川普连夜签法案 奇特程序引议</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12649983.md#1">【财商天下】阿里巴巴被调查 一夜蒸发近万亿</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12650498.md#1">牵连范丞丞杂志遭下架 范冰冰尝试复出再碰壁</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/27/n12647886.md#1">因星爷《长江七号》爆红 徐娇称造成童年阴影</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12648660.md#1">2020全球百大美女榜 Lisa夺亚军 子瑜获第四名</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/27/n12648003.md#1">傅雷之子 86岁钢琴家傅聪在英国染疫住院</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12650270.md#1">杨幂自曝拒录一档走红综艺节目原因</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12649226.md#1">在相同公司待84年 世界最忠诚员工过世</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12648795.md#1">2020年很糟？ 看诺查丹玛斯如何预言2021年</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/29/n12651442.md#1">天鹅哀悼同伴死亡 导致德国23列火车误点</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/16/8/16/n8205756.md#1">脸黄、老得快是血虚？女人血虚有6大原因</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lxeios3137/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lxeios3137/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/30/n12655776.htm">王友群：2020年中共不准讲真话的七大案例</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/30/n12655776.htm">王友群：2020年中共不准讲真话的七大案例</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lxeios3137/djy/blob/master/gb/20/12/30/n12655776.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lxeios3137/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lxeios3137/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lxeios3137/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lxeios3137/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lxeios3137/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/20/12/30/n12655776.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
